# DX11-Getting-Started

./: .gitignore
DX11-Basic/: CMakeLists.txt  CMakePresets.json
DX11-Basic/Libraries/: FetchLibraries.cmake
DX11-Basic/Src/: CMakeLists.txt  main.cpp
DX11-Basic/Src/Window/: Window.cpp  Window.h
